// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CasesTable component should render properly 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Client Name 
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Date of birth 
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Uploaded by 
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Last upload 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell"
        >
          foo bar
        </td>
        <td
          class="govuk-table__cell"
        >
          25/10/2000
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell"
        >
          Oct 25, 2020
        </td>
        <td
          class="govuk-table__cell govuk-button--secondary'"
        >
          <a
            class="govuk-link"
            href="https://foo.bar"
            rel="noopener"
            target="_blank"
          >
            View
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`CasesTable component should render the sort 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Client Name 🔽
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Date of birth 
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Uploaded by 
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Last upload 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell"
        >
          foo bar
        </td>
        <td
          class="govuk-table__cell"
        >
          25/10/2000
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell"
        >
          Oct 25, 2020
        </td>
        <td
          class="govuk-table__cell govuk-button--secondary'"
        >
          <a
            class="govuk-link"
            href="https://foo.bar"
            rel="noopener"
            target="_blank"
          >
            View
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`CasesTable component should render the sort 2`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Client Name 🔼
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Date of birth 
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Uploaded by 
        </th>
        <th
          class="govuk-table__header"
          role="button"
          scope="col"
        >
          Last upload 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell"
        >
          foo bar
        </td>
        <td
          class="govuk-table__cell"
        >
          25/10/2000
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell"
        >
          Oct 25, 2020
        </td>
        <td
          class="govuk-table__cell govuk-button--secondary'"
        >
          <a
            class="govuk-link"
            href="https://foo.bar"
            rel="noopener"
            target="_blank"
          >
            View
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
